[BUGFIX] Missing padding before content collection creation form
In the media browser/module there's no padding between the creation form
and the edit icon for collections, when no collections have been created.

Releases: master, 2.0
Related: NEOS-251
Original-Commit-Hash: 35187264eb146ef39f5794b8f31a287045ae07cb

--- a/TYPO3.Neos/Resources/Public/Styles/Neos.css
+++ b/TYPO3.Neos/Resources/Public/Styles/Neos.css
@@ -6,25 +6,25 @@
   font-family: 'Noto Sans';
   font-style: normal;
   font-weight: 400;
-  src: local("Noto Sans"), local("NotoSans"), url('../Fonts/NotoSans/NotoSans-Regular.ttf?1428863081') format('truetype');
+  src: local("Noto Sans"), local("NotoSans"), url('../Fonts/NotoSans/NotoSans-Regular.ttf?1430250340') format('truetype');
 }
 @font-face {
   font-family: 'Noto Sans';
   font-style: normal;
   font-weight: 700;
-  src: local("Noto Sans Bold"), local("NotoSans-Bold"), url('../Fonts/NotoSans/NotoSans-Bold.ttf?1428863081') format('truetype');
+  src: local("Noto Sans Bold"), local("NotoSans-Bold"), url('../Fonts/NotoSans/NotoSans-Bold.ttf?1430250340') format('truetype');
 }
 @font-face {
   font-family: 'Noto Sans';
   font-style: italic;
   font-weight: 400;
-  src: local("Noto Sans Italic"), local("NotoSans-Italic"), url('../Fonts/NotoSans/NotoSans-Italic.ttf?1428863081') format('truetype');
+  src: local("Noto Sans Italic"), local("NotoSans-Italic"), url('../Fonts/NotoSans/NotoSans-Italic.ttf?1430250340') format('truetype');
 }
 @font-face {
   font-family: 'Noto Sans';
   font-style: italic;
   font-weight: 700;
-  src: local("Noto Sans Bold Italic"), local("NotoSans-BoldItalic"), url('../Fonts/NotoSans/NotoSans-BoldItalic.ttf?1428863081') format('truetype');
+  src: local("Noto Sans Bold Italic"), local("NotoSans-BoldItalic"), url('../Fonts/NotoSans/NotoSans-BoldItalic.ttf?1430250340') format('truetype');
 }
 @font-face {
   font-family: 'neos-language';
@@ -10831,7 +10831,6 @@
 .neos.media-browser aside.neos-media-aside .neos-media-aside-group .neos-media-aside-list {
   background-color: #3f3f3f;
   border-top: 1px solid #3f3f3f;
-  margin-bottom: 16px;
 }
 .neos.media-browser aside.neos-media-aside .neos-media-aside-group .neos-media-aside-list.neos-media-aside-list-editing-active li .neos-sidelist-edit-actions {
   display: block;
@@ -10928,6 +10927,7 @@
 }
 .neos.media-browser aside.neos-media-aside .neos-media-aside-group > form {
   display: none;
+  margin-top: 16px;
 }
 .neos.media-browser aside.neos-media-aside .neos-media-aside-group > form.neos-media-aside-list-editing-active {
   display: block;
